added guild/server search and event handler for member join coroutine

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # .env
 
-DISCORD_TOKEN=NDc1NTA1MjcyNjUyMTY5MjI2.W2Zuyw.iVzmhEZp-HWNyOsOcTcGFKRU_Qw
+DISCORD_TOKEN=NDc1NTA1MjcyNjUyMTY5MjI2.W2Zuyw.DFtqY20CZByVzWlIa0xHT5chaXw
+DISCORD_GUILD=Anish's Server
