updated env variables

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # .env
 
-DISCORD_TOKEN=NDc1NTA1MjcyNjUyMTY5MjI2.W2Zuyw.yUQifJpEJJ17Dc3Z25Be5Q9AP5A
+DISCORD_TOKEN=NDc1NTA1MjcyNjUyMTY5MjI2.W2Zuyw.1w8Xl-bYddNzMubTpoeYAsIJv-g
+GIPHY_TOKEN=8CcGBqRxzsC8udvUb8PwbChsJM38dy5v
